objects/Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Additional_comments_or_feedback_for_us__c</fullName>
        <label>Additional comments or feedback for us</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Case__r.Contact.FirstName + &quot; &quot; + Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_to_day_functionality_of_the_product__c</fullName>
        <label>Day to day functionality of the product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ease_of_use__c</fullName>
        <label>Ease of use</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience_with_billing_and_accounting__c</fullName>
        <label>Experience with billing and accounting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
                <value>
                    <fullName>6.N/A</fullName>
                    <isActive>false</isActive>
                    <label>6.N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendliness_of_the_Customer_Care_team__c</fullName>
        <label>Friendliness of the Customer Care team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
                <value>
                    <fullName>6.N/A</fullName>
                    <isActive>false</isActive>
                    <label>6.N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Helpfulness_of_the_Customer_Care_team__c</fullName>
        <label>Helpfulness of the Customer Care team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
                <value>
                    <fullName>6.N/A</fullName>
                    <isActive>false</isActive>
                    <label>6.N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_are_you_to_recommend_A3_Smart__c</fullName>
        <label>How likely are you to recommend A3 Smart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_satisfied_are_you_with_A3_Smart_Home__c</fullName>
        <label>How satisfied are you with A3 Smart Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>(1) Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>(1) Extremely satisfied</label>
                </value>
                <value>
                    <fullName>(2)Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>(2)Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>(3)Neither satisfied nor dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>(3)Neither satisfied nor dissatisfied</label>
                </value>
                <value>
                    <fullName>(4)Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>(4)Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>(5)Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>(5)Extremely dissatisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_for_your_score__c</fullName>
        <label>Reasons for your score</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsiveness_of_the_Customer_Care_team__c</fullName>
        <label>Responsiveness of the Customer Care team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
                <value>
                    <fullName>6.N/A</fullName>
                    <isActive>false</isActive>
                    <label>6.N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfaction_with_Customer_Care_team__c</fullName>
        <label>Satisfaction with Customer Care team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.Extremely satisfied</fullName>
                    <default>true</default>
                    <label>5.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>3.Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2.Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1.Extremely dissatisfied</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1.Extremely satisfied</fullName>
                    <isActive>false</isActive>
                    <label>1.Extremely satisfied</label>
                </value>
                <value>
                    <fullName>2.Somewhat satisfied</fullName>
                    <isActive>false</isActive>
                    <label>2.Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>4.Somewhat dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>4.Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>5.Extremely dissatisfied</fullName>
                    <isActive>false</isActive>
                    <label>5.Extremely dissatisfied</label>
                </value>
                <value>
                    <fullName>6.N/A</fullName>
                    <isActive>false</isActive>
                    <label>6.N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>How_satisfied_are_you_with_A3_Smart_Home__c</columns>
        <columns>Satisfaction_with_Customer_Care_team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Member_Experience_Customer_Survey</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Experience</label>
        <queue>Member_Experience</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>